--- a/AngularFastfood/src/app/testing/testing.component.html
+++ b/AngularFastfood/src/app/testing/testing.component.html
@@ -1,1 +1,5 @@
-<p>testing works!</p>
+<div>
+    <label for="log">GetOrders</label>
+    <!-- (click) passes input value to add() and then clears the input -->
+    <button (click)="GetOrder(); ">Get Order</button>
+</div>
