--- a/AngularFastfood/src/app/Components/navbar/navbar.component.css
+++ b/AngularFastfood/src/app/Components/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+/*
 ul {
     list-style-type: none;
     margin: 0;
@@ -48,4 +49,4 @@ ul {
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  
+  */
