--- a/AngularFastfood/src/app/Components/navbar/navbar.component.html
+++ b/AngularFastfood/src/app/Components/navbar/navbar.component.html
@@ -1,10 +1,22 @@
-<nav>
-    <ul>
-      <li><a routerLink="/FrontPage">Frontpage</a></li>
-      <li><a routerLink="/Food">Food</a></li>
-      <li><a routerLink="">Login</a></li>
-      <li><a routerLink="/Food">Food</a></li>
-      <button>Food</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-lg">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <a class="navbar-brand" href="#">CompanyLogo</a>
+
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbarSupportedContent">
+      <li class="nav-item"><a class="nav-link active" routerLink="/FrontPage">Frontpage</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/Food">Food</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="">Login</a></li>
+      <li class="nav-item"><a class="nav-link" aria-current="page" href="#" routerLink="">Peta</a></li>
+
     </ul>
-  </nav>
-  
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    </div>
+  </div>
+</nav>
