--- a/AngularFastfood/src/app/Components/testing/testing.component.html
+++ b/AngularFastfood/src/app/Components/testing/testing.component.html
@@ -1,5 +1,8 @@
+<body>
+    
 <div>
     <label for="log">GetOrders</label>
     <!-- (click) passes input value to add() and then clears the input -->
     <button (click)="GetOrder(); ">Get Order</button>
 </div>
+</body>
