--- a/AngularFastfood/src/app/Components/navbar/navbar.component.html
+++ b/AngularFastfood/src/app/Components/navbar/navbar.component.html
@@ -17,14 +17,34 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbarSupportedContent">
         <li class="nav-item"><a class="nav-link active" routerLink="/FrontPage">Frontpage</a></li>
-        <li class="nav-item"><a class="nav-link" aria-current="page" href="#" routerLink="/Food">Food</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/products">Food</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="">Login</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="">Peta</a></li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
+      <!--ngif cookie is present-->
+      <div>
+        <form (ngSubmit)="ToLogin(_login)" #loginForm="ngForm" class="d-flex">
+          <label for="ToLogin"></label>
+          <div class="d-flex">
+            
+            <input class="form-control me-2" type="text"  placeholder="Email" required
+              [(ngModel)]="_login.email" #loginEmail="ngModel">
+            <div [hidden]="loginEmail.valid || loginEmail.pristine">
+              Email is required
+            </div>
+
+            <input class="form-control me-2" type="text" name="loginPassword" id="loginPassword" placeholder="Password" required
+              [(ngModel)]="_login.email" #loginPassword="ngModel">
+            <div [hidden]="loginEmail.valid || loginEmail.pristine">
+              Password is required
+            </div>
+
+          </div>
+          <button class="btn border" type="submit">Login</button>
+        </form>
+
+      </div>
     </div>
 
   </div>
