Bootstrap og login system

--- a/AngularFastfood/src/app/Components/header/header.component.html
+++ b/AngularFastfood/src/app/Components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="container-fluid" >
+    <img src="https://images.ctfassets.net/rporu91m20dc/2OJbYNR1jGuKc0akweMGQK/5ec7e4aaddb887a9478d5c412296f659/DOOM-Eternal_KeyArt_3_1920x1080.jpg" 
+    width="100%" height="360" class="" alt="doom guy">
+</div>
+
