--- a/AngularFastfood/src/app/Components/navbar/navbar.component.html
+++ b/AngularFastfood/src/app/Components/navbar/navbar.component.html
@@ -57,7 +57,7 @@
     <h2 class="text-center mb-5">Angular Login with Google</h2>
     <div *ngIf="_isLoggedIn === false">
       <div>
-        <button type="button" (click)="loginWithGoogle()" class="btn btn-danger">Login with Google</button>
+        <button type="button" (click)="ExternalLogin()" class="btn btn-danger">Login with Google</button>
       </div>
     </div>
     <div *ngIf="_isLoggedIn === true">
@@ -73,9 +73,8 @@
         <label>Email</label>
         <input type="text" class="form-control" [value]="socialUser.email" id="email" readonly>
       </div>
-      <button type="button" (click)="logOut()" class="btn btn-primary">Log Out</button>
+      <button type="button" (click)="LogOutWithGoogle()" class="btn btn-primary">Log Out</button>
     </div>
   </div>
 
 </nav>
-
