Identity og google
Skal måske wrappe alt i JWT istedetfor men kan ikke finde ud af om det er sikkert nok til at gøre

--- a/AngularFastfood/src/app/Components/navbar/navbar.component.html
+++ b/AngularFastfood/src/app/Components/navbar/navbar.component.html
@@ -73,7 +73,7 @@
         <label>Email</label>
         <input type="text" class="form-control" [value]="socialUser.email" id="email" readonly>
       </div>
-      <button type="button" (click)="LogOutWithGoogle()" class="btn btn-primary">Log Out</button>
+      <button type="button" (click)="LogoutExternal()" class="btn btn-primary">Log Out</button>
     </div>
   </div>
 
