--- a/AngularFastfood/src/app/Components/productview/productview.component.html
+++ b/AngularFastfood/src/app/Components/productview/productview.component.html
@@ -1,12 +1,20 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            
+            <div *ngIf="_product">
+                <div>
+                    {{_product.name}}
+                </div>
+                <div>
+                    {{_product.price}}
+                </div>
+            </div>
         </div>
         <div class="col mt-5">
             <p class="text-center">Food items</p>
             <ul class="list-group " *ngIf="_products">
-                <li class="list-group-item d-flex justify-content-between border mt-2 px-5 bg-light" *ngFor="let product of _products">
+                <li class="list-group-item d-flex justify-content-between border mt-2 px-5 bg-light"
+                    *ngFor="let product of _products">
                     <div>
                         {{product.name}}
                     </div>
@@ -21,4 +29,3 @@
         </div>
     </div>
 </div>
-
