--- a/AngularFastfood/src/app/Components/testing/testing.component.html
+++ b/AngularFastfood/src/app/Components/testing/testing.component.html
@@ -5,4 +5,9 @@
         <!-- (click) passes input value to add() and then clears the input -->
         <button (click)="GetOrder(); ">Get Order</button>
     </div>
+
+    <div>
+        <svg class="bi bi-google width: 1em">s</svg>
+    </div>
+    <img src="assets/bootstrap/google.svg" alt="Bootstrap">
 </body>
